--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Permanent+Marker&display=swap');
 *{
   box-sizing: border-box;
   margin: 0;
@@ -23,12 +24,7 @@ body{
 .hero-txt{
   font-family: 'Permanent Marker', cursive;
 }
- .rule:hover{
-  border-bottom: 2px solid black;
-  transition: 0.2s;
- 
 
-}
 .animate-charcter
 {
    text-transform: uppercase;
@@ -59,6 +55,7 @@ body{
 
 .header{
   border-bottom: 1px solid #E2E8F0;
+  
 }
 
 .navbar {
@@ -102,25 +99,27 @@ body{
 
 @media only screen and (max-width: 768px) {
   .nav-menu {
-      position: fixed;
+      position: absolute;
       left: -100%;
       top: 5rem;
       flex-direction: column;
       background-color: black;
       width: 100%;
-      border-radius: 10px;
+     
       text-align: center;
       transition: 0.3s;
       box-shadow:
           0 10px 27px rgba(0, 0, 0, 0.05);
   }
 
+ 
+
   .nav-menu.active {
       left: 0;
   }
 
   .nav-item {
-      margin: 2.5rem 0;
+      margin: 1.5rem 0;
   }
 
   .hamburger {
