--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body {
     flex-direction: column;
     background-color: black;
     width: 100%;
+    z-index: 1000;
 
     text-align: center;
     transition: 0.3s;
